add mockito dependency to pom.xml. worldloadertest also implemented, which uses this dependancy. tests 2d array grid logic, collision boundary math, tiled map property parsing, json deserialization